--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -80,7 +80,7 @@
     }
 
     <!--<app-how-it-works></app-how-it-works>-->
-    <bae-off-featured></bae-off-featured>
+    <bae-off-featured data-cy="offFeatured"></bae-off-featured>
     <!--<bae-off-gallery *ngIf="currentTheme?.dashboard?.showFeaturedOfferings">
     </bae-off-gallery>-->
     <app-platform-benefits *ngIf="currentTheme?.dashboard?.showPlatformBenefits"></app-platform-benefits>
