--- a/src/app/shared/characteristic/characteristic.component.html
+++ b/src/app/shared/characteristic/characteristic.component.html
@@ -4,7 +4,7 @@
       <h4 class="text-lg font-semibold text-primary-100 dark:text-gray-300">{{ characteristic.name }}</h4>
       <markdown class="text-gray-500 dark:text-gray-400 text-wrap break-all" [data]="characteristic.description"></markdown>
     </div>
-
+    @if(!isDisabled){
     <!-- Slider -->
     @if (isSlider()){
       <div class="flex items-center space-x-2">
@@ -31,6 +31,7 @@
           </option>
         </select>
       </div>
+    }
     }
 
 } @else {
