--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/create-product-spec/create-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/create-product-spec/create-product-spec.component.html
@@ -730,8 +730,8 @@
                                 </div>
                             </div>                    
                         }@else{
-                        <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white m-4">                        
-                        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-200">
+                        <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white m-4">
+                        <table data-cy="tableResourceSpecs" class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-200">
                             <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-secondary-200 dark:text-white">
                                 <tr>
                                     <th scope="col" class="px-6 py-3">
@@ -830,8 +830,8 @@
                                 </div>
                             </div>                    
                         }@else{
-                        <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white m-4">                        
-                            <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-200">
+                        <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white m-4">
+                            <table data-cy="tableServiceSpecs" class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-200">
                                 <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-secondary-200 dark:text-white">
                                 <tr>
                                     <th scope="col" class="px-6 py-3">
