--- a/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
+++ b/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
@@ -68,7 +68,7 @@
         </div>
       } @else if(filteredCharacteristics.length > 0) {
         <p class="mt-6 text-sm text-gray-500 dark:text-gray-400">Please select the characteristics you need to suit this offer to you.</p>
-        <div class="rounded-lg border border-dashed border-primary-100 bg-white p-2 m-2 dark:bg-gray-800">
+        <div class="rounded-lg border border-dashed border-primary-100 bg-white p-2 m-2 dark:bg-gray-800 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-2 mb-4">
           @for (ch of filteredCharacteristics ; track ch.id; let i = $index) {
             @if(!ch.name?.endsWith('- enabled')){
               <div class="flex flex-row w-full items-start">
@@ -95,7 +95,7 @@
     }
 
     @if(metrics.length>0){
-      <p class="mt-4  text-sm text-gray-500 dark:text-gray-400">Please on each metric indicate the value that best fits for you.</p>
+      <p class="mt-4  text-sm text-gray-500 dark:text-gray-400">You can change the metric values to simulate final prices</p>
       <div class="grid grid-cols-4 gap-2 mb-4">
         @for (metric of metrics || []; track metric.unitOfMeasure) {
           <div class="flex flex-col">
