--- a/src/app/pages/product-inventory/inventory-items/inventory-products/inventory-products.component.html
+++ b/src/app/pages/product-inventory/inventory-items/inventory-products/inventory-products.component.html
@@ -120,7 +120,7 @@
                                 <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-white">{{inv.product?.name}}</h5>
                                 </a>
                                 @if(inv.status == 'active'){
-                                <button type="button" data-tooltip-target="unsubscribe-default" (click)="showUnsubscribeModal(inv);$event.stopPropagation();" class="flex text-red-600 border border-red-600 hover:bg-red-600 hover:text-white focus:ring-4 focus:outline-none focus:ring-red-400 font-medium rounded-full text-sm p-2 text-center inline-flex items-center">
+                                <button type="button" data-tooltip-target="unsubscribe-default" (click)="showUnsubscribeModal(inv);$event.stopPropagation();" class="flex h-fit text-red-600 border border-red-600 hover:bg-red-600 hover:text-white focus:ring-4 focus:outline-none focus:ring-red-400 font-medium rounded-full text-sm p-2 text-center inline-flex items-center">
                                     <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6"/>
                                     </svg>                                    
