--- a/src/app/pages/search-catalog/search-catalog.component.html
+++ b/src/app/pages/search-catalog/search-catalog.component.html
@@ -73,10 +73,10 @@
       } @else {
         <div class="flex items-center mx-auto max-w-screen-xl w-full items-center bg-white dark:bg-secondary-100 rounded-lg shadow-lg ml-4 mb-4">
           <div class="relative w-full">
-            <!-- Background image layer -->
+            <!-- Background image layer
             <div class="absolute inset-0 bg-no-repeat bg-cover opacity-40 z-0 rounded-lg"
                  style="background-image: url('{{ logo }}');">
-            </div>
+            </div> -->
           
             <!-- Content layer -->
             <div class="relative flex flex-row justify-between items-start w-full p-8">
