--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
-<footer class="fixed bottom-0 left-0 z-10 h-[25px] w-full p-4 bg-white border-t border-gray-200 shadow md:flex md:items-center md:justify-end md:p-6 dark:bg-tertiary-50 dark:border-gray-600">
-  <div class="flex justify-between items-center w-full">
+<div>
+  <div class="flex h-[25px] justify-center md:justify-between items-center bg-white border-t border-gray-200 shadow dark:bg-tertiary-50 dark:border-gray-600 p-4">
     <!-- Social Links Dinámicos -->
-    <div class="flex justify-start text-gray-500 dark:text-gray-400">
+    <div class="hidden md:flex justify-start text-gray-500 dark:text-gray-400">
       <ng-container *ngFor="let social of socialLinks; let last = last">
         <fa-icon (click)="open(social.url!)" [ngClass]="{'mr-4': !last}" class="cursor-pointer" [icon]="social.icon"></fa-icon>
       </ng-container>
@@ -26,7 +26,7 @@
       </li>
     </ul>
   </div>
-</footer>
+</div>
 
 @if(feedback){
   <feedback-modal
