FIX bugs + ADD new certifications (#143)
* FIX feedback modal wont show up again on search if closed from cross button

* FIX bugs + ADD new certification list

--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -230,11 +230,11 @@
                        No level
                     </h3>
                 }@else if(complianceLevel=='BL'){
-                    <img class="z-10 dark:text-white rounded-md mr-2" src="assets/logos/baseline.png">
+                    <img class="z-10 dark:text-white rounded-md mr-2 max-w-md" src="assets/logos/baseline.png">
                 } @else if(complianceLevel=='P') {
-                <img class="z-10 dark:text-white rounded-md mr-2" src="assets/logos/prof.png">
+                <img class="z-10 dark:text-white rounded-md mr-2 max-w-md" src="assets/logos/prof.png">
                 } @else {
-                <img class="z-10 dark:text-white rounded-md mr-2" src="assets/logos/profplus.png">
+                <img class="z-10 dark:text-white rounded-md mr-2 max-w-md" src="assets/logos/profplus.png">
                 }
                 <p class="mb-2 text-gray-800 dark:text-gray-200">
                     {{ complianceDescription }}
