--- a/src/app/pages/product-orders/sections/order-info/order-info.component.html
+++ b/src/app/pages/product-orders/sections/order-info/order-info.component.html
@@ -275,7 +275,7 @@
                                     {{orderToShow.id}}
                                 </h3>
                             </div>
-                            <div class="flex flex-row gap-2 pb-2 text-gray-600">
+                            <div data-cy="globalState" class="flex flex-row gap-2 pb-2 text-gray-600">
                                 <p class="w-fit text-base font-bold shrink-0 dark:text-white">
                                     {{ 'PRODUCT_INVENTORY._state' | translate }}
                                 </p>
@@ -359,7 +359,7 @@
                                         </th>
                                     </tr>
                                 </thead>
-                                <tbody>
+                                <tbody data-cy="orderItems">
                                     @for (item of orderToShow.productOrderItems; track item.id; let idx = $index) {
                                         <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
                                             <td class="px-6 py-4 text-center align-middle flex justify-center items-center">
