--- a/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
+++ b/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
@@ -119,7 +119,7 @@
         <markdown class="text-gray-500 dark:text-gray-400 text-wrap break-all" [data]="tsAndCs.description"></markdown>
         </div>
         <div class="flex items-center">
-          <input type="checkbox" id="tsAccepted" class="mr-2" formControlName="tsAccepted">
+          <input type="checkbox" id="tsAccepted" data-cy="acceptTermsCheckbox" class="mr-2" formControlName="tsAccepted">
           <label for="tsAccepted" class="text-sm">I accept the terms and conditions</label>
         </div>
       </div>
